--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "near-api-js": "^0.26.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "uuid":"8.2.0",
     "regenerator-runtime": "^0.13.5"
   },
   "jest": {
