--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "uuid":"8.2.0",
+    "react-timestamp":"5.1.0",
     "regenerator-runtime": "^0.13.5"
   },
   "jest": {
